syntax = "proto3";
package chess;

import "common.proto";

// ============================================================================
// Saved Positions Messages
// ============================================================================

message SavePositionRequest {
  string name = 1;
  string fen = 2;
}

message SavePositionResponse {
  string position_id = 1;
}

message ListPositionsRequest {}

message ListPositionsResponse {
  repeated SavedPosition positions = 1;
}

message SavedPosition {
  string position_id = 1;
  string name = 2;
  string fen = 3;
  bool is_default = 4;
  uint64 created_at = 5;
}

message DeletePositionRequest {
  string position_id = 1;
}
